[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Actors/Enemies/DRONE/drone.png" type="Texture" id=1]
[ext_resource path="res://Actors/Enemies/Drone/DroneTurret.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Enemies/Drone/Drone.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 120.0

[sub_resource type="CircleShape2D" id=4]
radius = 160.0

[node name="Drone" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DroneTurret" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="SensorsPivot" type="Node2D" parent="."]

[node name="Sensor1" type="RayCast2D" parent="SensorsPivot"]
enabled = true
cast_to = Vector2( 20, 0 )

[node name="Sensor2" type="RayCast2D" parent="SensorsPivot"]
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Sensor3" type="RayCast2D" parent="SensorsPivot"]
enabled = true
cast_to = Vector2( -20, 0 )

[node name="Sensor4" type="RayCast2D" parent="SensorsPivot"]
enabled = true
cast_to = Vector2( 0, -20 )

[node name="AggroRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource( 3 )

[node name="DeaggroRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeaggroRange"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_AggroRange_body_entered"]
[connection signal="body_exited" from="DeaggroRange" to="." method="_on_DeaggroRange_body_exited"]

[editable path="Hurtbox"]
